# stm32f4-rtic-playground

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
