[package]
authors = ["Alexey Shvetsov"]
name = "f411-rtic-playground"
edition = "2021"
version = "0.1.0"

[dependencies]
defmt = "0.3.2"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = [ "print-defmt" ] }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.2"
ssd1306 = "0.7.0"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.6.1"
embedded-hal = "<1.0"
dwt-systick-monotonic = "1.0.0"
rtic-monotonic = "1.0.0"
stm32f4xx-hal = { version = "0.13.1", features = ["rt", "stm32f411", "usb_fs", "rtic"] }
ushell = "0.3.5"
shared-bus-rtic = "0.2.2"
embedded-graphics = "0.7.1"
heapless = "0.7.13"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false 
